# SystemMonitor

./: Cargo.toml  go.mod  go.sum  main.go
src/: controller.rs  lib.rs  main.rs  models.rs  utils.rs
src/collector/: cpu.rs  disk.rs  memory.rs  mod.rs  network.rs  process.rs
src/config/: mod.rs
src/ui/: mod.rs
