[package]
name = "system-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
sysinfo = "0.32"
tokio = { version = "1", features = ["full"] }
ratatui = "0.29"
crossterm = "0.28"
anyhow = "1.0"
thiserror ="1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"

[profile.release]
opt-level = 3
lto = true
